update: update top-btn

--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Brian Sayen Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      window.onscroll = function()
+      {
+          if(pageYOffset >= 200)
+          { document.getElementById('top-btn').style.visibility="visible" } 
+          else { document.getElementById('top-btn').style.visibility="hidden" }
+      };
+    </script>
   </body>
 </html>
